--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apexcharts": "^3.6.10",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
