--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "private": true,
   "dependencies": {
     "apexcharts": "^3.6.10",
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-apexcharts": "^1.3.3",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-redux": "^7.0.3",
+    "react-scripts": "3.0.0",
+    "react-select": "^2.4.3",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
