--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "0.10.32.157/stats-frontend",
+  "homepage": ".",
   "browserslist": {
     "production": [
       ">0.2%",
